Cooking: Store build dependencies, runtime dependencies, and TargetDomainKey in an attachment in the oplog. #rb Per.Larsson #rnx
[CL 17016596 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -330,6 +330,7 @@ MaxMemoryAllowance=16384
 EditorDomainEnabled=false
 EditorDomainSaveUnversioned=false
 BulkDataRegistryEnabled=false
+TargetDomainEnabled=false
 PackagesPerGC=0
 IdleTimeToGC=20
 MemoryMaxUsedPhysical=16384
