Copy the ImageMagick native Dlls to Gauntlet bin output
#jira UE-120174
#rb none
#rnx

#ROBOMERGE-SOURCE: CL 17024234 via CL 17029377 via CL 17029521 via CL 17029598
#ROBOMERGE-BOT: STARSHIP (Release-Engine-Staging -> Release-Engine-Test) (v846-17029325)
#ROBOMERGE[STARSHIP]: UE5-Main

[CL 17029628 by jerome delattre in ue5-release-engine-test branch]

--- a/Engine/Source/Programs/AutomationTool/Gauntlet/Gauntlet.Automation.csproj
+++ b/Engine/Source/Programs/AutomationTool/Gauntlet/Gauntlet.Automation.csproj
@@ -47,9 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="ThirdParty\Magick.NET\Magick.NET-Q16-HDRI-AnyCPU\runtimes\**\*.*" Link="..\..\runtimes\%(RecursiveDir)%(Filename)%(Extension)">
+    <Content Include="ThirdParty\Magick.NET\Magick.NET-Q16-HDRI-AnyCPU\runtimes\**\*.*" Link="%(Filename)%(Extension)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
     <!-- The following will glob all platform extensions' Gauntlet source
