The local caching of Mirage payloads after pulling them from persistent storage can now be enabled/disabled via the config file option '[Core.ContentVirtualization].EnableCacheAfterPull', defaults to true.
#rb Mikko.Mononen
#rnx
#preflight 610a30c8b4288d0001bfb7a2

[CL 17047062 by paul chipchase in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1046,6 +1046,7 @@ EnablePackageSidecarSaving=False
 ; Options for the content virtualization system
 [Core.ContentVirtualization]
 EnablePushToBackend=False
+EnableCacheAfterPull=True
 MinPayloadLength=0
 BackendGraph=ContentVirtualizationBackendGraph_None
 
