ZenDDC: Add Namespace field for Jupiter. #rb None #rnx
[CL 17082721 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2007,14 +2007,14 @@ EnginePak=(Type=ReadPak, Filename=%ENGINEDIR%DerivedDataCache/DDC.ddp)
 [ZenOnlyDDC]
 MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=Zen)
-Zen=(Type=Zen, Host="http://localhost:1337" ReadOnly=false)
+Zen=(Type=Zen, Host="http://localhost:1337", ReadOnly=false, Namespace="ue4.ddc")
 
 [ZenDDC]
 MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Zen, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Shared)
-Zen=(Type=Zen, Host="http://localhost:1337" ReadOnly=false)
+Zen=(Type=Zen, Host="http://localhost:1337", ReadOnly=false, Namespace="ue4.ddc")
 Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=10, FoldersToClean=10, MaxFileChecksPerSec=1, ConsiderSlowAt=70, PromptIfMissing=false, Path=?EpicDDC, EnvPathOverride=UE-SharedDataCachePath, EditorOverrideSetting=SharedDerivedDataCache, CommandLineOverride=SharedDataCachePath)
 
 [DerivedDataBackendGraph_Fill_Seattle]
