Use EngineDir() to resolve asset path for automated tests from engine config file
#jira UE-120439
#rb Chris.Constantinescu
#rnx

[CL 17084065 by Jerome Delattre in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2187,12 +2187,12 @@ bFilterDependenciesWithNoTags=false
 bFilterSearchableNames=true
 
 [AutomationTesting]
-ImportTestPath=../../Content/EditorAutomation/
+ImportTestPath=Content/EditorAutomation/
 ImportTestPackagePath=/Engine/Content/EditorAutomation
 bForceSmokeTests=false
 
 [AutomationTesting.FbxImport]
-FbxImportTestPath=../../Content/FbxEditorAutomation/
+FbxImportTestPath=Content/FbxEditorAutomation/
 FbxImportTestPackagePath=/Engine/FbxEditorAutomationOut
 
 [AutomationTesting.Blueprint]
