EditorDomain: Add PackageBlacklist and ClassBlacklist, for working around packages and classes that are temporarily not working when loaded from EditorDomain. Move all Editor domain variables under the [EditorDomain] setting.
[CL 17100101 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -324,8 +324,6 @@ MinFreeMemory=1024
 MaxUsedMemory=16384
 
 [CookSettings]
-EditorDomainEnabled=false
-EditorDomainSaveUnversioned=false
 BulkDataRegistryEnabled=false
 TargetDomainEnabled=false
 PackagesPerGC=0
@@ -370,6 +368,12 @@ bUseFullGCAssetClassNames=true
 +ConfigSettingBlacklist=*.Engine:/Script/LinuxTargetPlatform.LinuxTargetSettings
 +ConfigSettingBlacklist=*.Engine:/Script/UnrealEd.CookerSettings:bIterativeCookingForFileCookContent
 +ConfigSettingBlacklist=*.Engine:OnlineSubsystemMcp
+
+[EditorDomain]
+EditorDomainEnabled=false
+SaveUnversioned=false
+; +ClassBlacklist=/Long/PackageName.ClassName
+; +PackageBlacklist=/Long/PackageName OR ../../../Standard/Filename/NoExtension OR D:\Absolute\Filename\NoExtension
 
 
 [CookPlatformDataCacheSettings]
