- Handle older NVIDIA drivers having incompatible version of NVEC and cause crash on Editor start - Fix CUDA Module Load error on Windows when initializing CUDA NVENC
#JIRA UE-121190
#rb self
#fyi Marco.Anastasi, Laz.Matech, Jessica.Plowman
#lockdown Cristina.Riveron
#robomerge[bot4] -bot4-release-engine-staging

[CL 17101317 by Aidan Possemiers in 4.27 branch]

--- a/Engine/Plugins/Media/HardwareEncoders/HardwareEncoders.uplugin
+++ b/Engine/Plugins/Media/HardwareEncoders/HardwareEncoders.uplugin
@@ -7,7 +7,7 @@
 	"Category": "Encoders",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "http://epicgames.com",
-	"EnabledByDefault": true,
+	"EnabledByDefault": false,
 	"CanContainContent": false,
 	"IsBetaVersion": true,
 	"Installed": false,
