--- a/Engine/Plugins/Media/PixelStreaming/PixelStreaming.uplugin
+++ b/Engine/Plugins/Media/PixelStreaming/PixelStreaming.uplugin
@@ -28,6 +28,10 @@
 			"Name": "WmfMedia",
 			"Enabled": true,
 			"BlacklistPlatforms": [ "Linux" ]
+		},
+		{
+			"Name": "HardwareEncoders",
+			"Enabled": true
 		}
 	]
 }
